# ffmpeg-bitrate-stats

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  HISTORY.md  LICENSE.md  README.md  ffmpeg_bitrate_stats.py  pyproject.toml  release.sh  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-package.yml
docs/: ffmpeg_bitrate_stats.html  index.html  search.js
ffmpeg_bitrate_stats/: __init__.py  __main__.py  bitrate_stats.py
src/ffmpeg_bitrate_stats/: __init__.py  __main__.py  bitrate_stats.py  log.py
stream_bitrate_stats/: __main__.py
test/: test.py
tests/: test_ffmpeg_bitrate_stats.py
