[build-system]
requires = ["uv_build>=0.8.14,<1.0.0"]
build-backend = "uv_build"

[project]
name = "ffmpeg_bitrate_stats"
version = "1.3.2"
description = "Calculate bitrate statistics using FFmpeg"
readme = "README.md"
authors = [
    { name = "Werner Robitza", email = "werner.robitza@gmail.com" }
]
license = "MIT"
license-files = ["LICENSE.md"]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Video",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "numpy",
    "pandas",
    "plotille",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/slhck/ffmpeg-bitrate-stats"
Repository = "https://github.com/slhck/ffmpeg-bitrate-stats"

[project.scripts]
ffmpeg-bitrate-stats = "ffmpeg_bitrate_stats.__main__:main"

[dependency-groups]
dev = [
    "pytest >=8.1.1,<9",
    "ruff>=0.12.11",
    "ty>=0.0.1a7",
    "pdoc>=15.0.4",
]


